crates/reap-pm-core/tests/ui/exact_order_amounts_cannot_be_forged.stderr
error[E0277]: the trait bound `PmOrderAmounts: From<(U256, U256)>` is not satisfied
 --> tests/ui/exact_order_amounts_cannot_be_forged.rs:7:20
  |
7 |     (maker, taker).into()
  |                    ^^^^ the trait `From<(U256, U256)>` is not implemented for `PmOrderAmounts`
  |
  = note: required for `(U256, U256)` to implement `Into<PmOrderAmounts>`

error[E0277]: the trait bound `PmOrderAmounts: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/exact_order_amounts_cannot_be_forged.rs:11:27
   |
11 |     require_deserialize::<PmOrderAmounts>();
   |                           ^^^^^^^^^^^^^^ the trait `for<'de> Deserialize<'de>` is not implemented for `PmOrderAmounts`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `PmOrderAmounts` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
note: required by a bound in `require_deserialize`
  --> tests/ui/exact_order_amounts_cannot_be_forged.rs:4:27
   |
 4 | fn require_deserialize<T: for<'de> Deserialize<'de>>() {}
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `require_deserialize`
